--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,13 @@
   </head>
   <body>
       <center>
+          <p>Astropy Unit Conversion</p>
             <form name="input" method='GET'>
-                From:
-                <input type="text" name="_input_value" value="{{ _input_value }}"><br>
+                Value:
+                <input type="text" name="_input_value" value="{{ _input_value }}">
+                Unit:
                 <input type="text" name="_input_unit" value="{{ _input_unit }}"><br>
+                Output Unit:
                 <input type="text" name="_output_unit" value="{{ _output_unit }}"><br>
                 <br>
                 <button type="submit">Submit</button>
