remove autocap and autocorrect on form input

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,16 +11,16 @@
             <form name="input" method='GET'>
                 <div class="form-group">
                     <label for="input_value">Value</label>
-                    <input type="text" name="_input_value" class="form-control" id="input_value" placeholder="{{ _input_value }}" value="{{ _input_value }}">
+                    <input type="text" name="_input_value" autocorrect="off" autocapitalize="off" class="form-control" id="input_value" placeholder="{{ _input_value }}" value="{{ _input_value }}">
                 </div>
                 <div class="form-group">
                     <label for="input_unit">Unit</label>
-                    <input type="text" name="_input_unit" class="form-control" id="input_unit" placeholder="{{ _input_unit }}" value="{{ _input_unit }}">
+                    <input type="text" name="_input_unit"  autocorrect="off" autocapitalize="off" class="form-control" id="input_unit" placeholder="{{ _input_unit }}" value="{{ _input_unit }}">
                 </div>
             </div>
                 <div class="form-group">
-                    <label for="output_unit">Unit</label>
-                    <input type="text" name="_output_unit" class="form-control" id="output_unit" placeholder="{{ _output_unit }}" value="{{ _output_unit }}">
+                    <label for="output_unit">Output Unit</label>
+                    <input type="text" name="_output_unit"  autocorrect="off" autocapitalize="off" class="form-control" id="output_unit" placeholder="{{ _output_unit }}" value="{{ _output_unit }}">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form><br>
