--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             </div>
     </div>
     <footer class="footer">
-        <p>Powered <a href="www.astropy.org/">Astropy</a></p>
+        <p>Powered <a href="http://www.astropy.org/">Astropy</a></p>
     </footer>
 </div><!-- /container -->
 </center>
